# NollaEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Main/: main.cpp
Scene/: entity.cpp  entity.h  scene.cpp  scene.h
Scene/Components/: transform.cpp  transform.h
Servers/Renderer/: renderer.cpp  renderer.h
Servers/Renderer/Vulkan/: vk_commands_&_sync.cpp  vk_commands_&_sync.h  vk_context.cpp  vk_context.h  vk_defaults.cpp  vk_defaults.h  vk_descriptors.cpp  vk_descriptors.h  vk_device.cpp  vk_device.h  vk_pipeline_builder.cpp  vk_pipeline_builder.h  vk_swapchain.cpp  vk_swapchain.h  vk_tools.cpp  vk_tools.h
Servers/Window/: CMakeLists.txt  window.cpp  window.h
Servers/Window/Main/: window.cpp  window.h
Shaders/: ShaderCompiler.sh  triangle.frag  triangle.vert
Utils/: logger.cpp  logger.h  utils.h
